unpackaged/main/default/objects/X20_Groups_Member__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <formula>if (Disconnect_Date__c &lt;= Today(),( (Disconnect_Date__c -  Original_Active_Date__c )/365),( (Today() -  Original_Active_Date__c )/365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>