unpackaged/main/default/objects/X20_Groups_Member__c/fields/Title_NCM_Classification__c.field-meta.xml
<CustomField>
    <fullName>Title_NCM_Classification__c</fullName>
    <formula>TEXT(  Member_Name__r.NCM_Title__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title (NCM Classification)</label>
    <type>Text</type>
</CustomField>