unpackaged/main/default/objects/X20_Groups_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>(&quot;Candidate&quot;)</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Member_Types</valueSetName>
    </valueSet>
</CustomField>