unpackaged/main/default/objects/X20_Groups_Member__c/fields/WinMaster_Member__c.field-meta.xml
<CustomField>
    <fullName>WinMaster_Member__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>WinMaster Member ID</inlineHelpText>
    <label>WinMaster Member</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>