unpackaged/main/default/objects/X20_Groups_Member__c/fields/WinMaster_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>WinMaster_Member_Name__c</fullName>
    <label>WinMaster Member Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>