unpackaged/main/default/objects/X20_Groups_Member__c/fields/X1st_Meeting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Meeting_End_Date__c</fullName>
    <formula>X1st_Meeting_Engagement__r.Engagement_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Meeting End Date</label>
    <type>Date</type>
</CustomField>