unpackaged/main/default/objects/X20_Groups_Member__c/fields/X1st_Meeting_Engagement__c.field-meta.xml
<CustomField>
    <fullName>X1st_Meeting_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Meeting Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>