unpackaged/main/default/objects/X20_Groups_Member__c/fields/X20GroupsMemberID_18__c.field-meta.xml
<CustomField>
    <fullName>X20GroupsMemberID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>20GroupsMemberID(18)</label>
    <type>Text</type>
</CustomField>