unpackaged/main/default/objects/X20_Groups_Member__c/recordTypes/X20_Group_Member.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_Member</fullName>
    <active>true</active>
    <label>20 Group Member</label>
</RecordType>