unpackaged/main/default/objects/X20_Groups_Member__c/validationRules/If_Status_is_Suspended_Include_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Suspended_Include_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

Text( Status__c )= &quot;Suspended&quot;,

OR ( isblank(Hold_End_Date__c),isblank( Hold_Start_Date__c ))
)</errorConditionFormula>
    <errorDisplayField>Hold_End_Date__c</errorDisplayField>
    <errorMessage>If Member status is Suspended the both a suspension start and end date are required!</errorMessage>
</ValidationRule>