unpackaged/main/default/objects/X20_Groups_Member__c/validationRules/Type_Field_Cannot_Be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Field_Cannot_Be_Updated</fullName>
    <active>true</active>
    <description>The user is not able to update the Type field to ‘Additional Store’ or ‘Special Composite’ without populating the ‘Related Full Membership&#39; lookup field.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED( Type__c ),
    ISBLANK( Related_Full_Membership__c ),
    OR(
      ISPICKVAL( Type__c, &quot;Additional_Store&quot; ),
      ISPICKVAL( Type__c, &quot;Special_Composite&quot; )
    )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>You must populate Related Full Membership before changing Type to &quot;Additional Store&quot; or &quot;Special Composite&quot;</errorMessage>
</ValidationRule>