unpackaged/main/default/objects/X20_Groups_Member__c/listViews/All_Candidates.listView-meta.xml
<ListView>
    <fullName>All_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Group_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Candidate</value>
    </filters>
    <label>All Candidates</label>
</ListView>