unpackaged/main/default/objects/X20_Groups_Member__c/listViews/CIPs.listView-meta.xml
<ListView>
    <fullName>CIPs</fullName>
    <columns>Group_Member_Number__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Also_No__c</columns>
    <columns>Manufacturer_Code__c</columns>
    <columns>NCM_Proprietor__c</columns>
    <columns>Production_Record_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>CIPs</label>
</ListView>