unpackaged/main/default/objects/X20_Groups_Member__c/listViews/Without_Group_Owner.listView-meta.xml
<ListView>
    <fullName>Without_Group_Owner</fullName>
    <columns>NAME</columns>
    <columns>NCM_Proprietor__c</columns>
    <columns>Owner_Code__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NCM_Proprietor__c</field>
        <operation>equals</operation>
    </filters>
    <label>Without Group Owner</label>
</ListView>